--- a/index.html
+++ b/index.html
@@ -8,30 +8,35 @@
   
   <title>Frontend Mentor | Order summary card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  Order Summary
-
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
+  <main class="card">
+    <img class="card__image" src="images/illustration-hero.svg" alt="Girl vibing to a song">
+    <div class="card__text">
+      <h1 class="card__title">Order Summary</h1>
+      <p class="card__body">You can now listen to millions of songs, audiobooks, and podcasts on
+      any device anywhere you like!</p>
+    </div>
+    <div class="card__payment">  
+      <div class="card__payment__item1">
+        <div class="card__payment__image__container">
+          <img class="card__payment__image" src="images/icon-music.svg" alt="music icon">
+        </div>
+        <div class="card__payment__text">
+          <h4 class="card__payment__title" class="payment-plan-heading">Annual Plan</h4>
+          <p class="card__payment__body">$59.99/year</p>
+        </div>
+      </div>
+      <a class="card__payment__btn" href="#">Change</a>
+    </div>
+    <div class="card__btn-proceed">Proceed to Payment</div>
+    <div class="card__btn-cancel">Cancel Order</div>
+  </main>
   
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="#">davidk55</a>.
+  </footer>
 </body>
 </html>
